--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -1,11 +1,19 @@
 <html>
     <head>
-        <title> Customer </title>
+        <title> Customer Registry </title>
+        <link rel="stylesheet" type="text/css" href="static/index.css">
     </head>
     <body>
-        <h1> Customer</h1>
-        {{ range . }}
+        <h1> Welcome Customer Registry</h1>
+        <form method="POST">
+            <textarea name="customer"> </textarea>
+            <div>
+                <button type="submit">Submit </button>
+            </div>
+        </form>
+        {{range . }}
         <div>{{ . }}</div>
         {{ end }}
     </body>
+
 </html>
