--- a/src/templates/signup.html
+++ b/src/templates/signup.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link href="../layout/styles/signup.css" rel="stylesheet" type="text/css" media="all">
+    <link href="layout/styles/signup.css" rel="stylesheet" type="text/css" media="all">
 </head>
 <body>
 
