Fixed html picture Links

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -4,14 +4,14 @@
   <title>the Counter</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <link href="./layout/styles/layout.css" rel="stylesheet" type="text/css" media="all">
+  <link href="../layout/styles/layout.css" rel="stylesheet" type="text/css" media="all">
 </head>
 <body id="top">
 <!-- ################################################################################################ -->
 <!-- ################################################################################################ -->
 <!-- ################################################################################################ -->
 <!-- Top Background Image Wrapper -->
-<div class="bgded overlay" style="background-image:url('./images/demo/backgrounds/counter_banner.png');">
+<div class="bgded overlay" style="background-image:url('../images/demo/backgrounds/counter_banner.png');">
   <!-- ################################################################################################ -->
   <div class="wrapper">
     <div id="pageintro" class="hoc clear">
@@ -20,10 +20,10 @@
         <h2 class="heading">the COUNTER</h2>
         <p>CUSTOM BURGERS</p>
         <footer>
-          <a class="btn" href="login">Login</a>
+          <a class="btn" href="login.html">Login</a>
         </footer>
         <footer>
-          <a class="btn" href="signup">SignUp</a>
+          <a class="btn" href="signup.html">SignUp</a>
 
         </footer>
       </article>
@@ -42,7 +42,7 @@
       <nav id="mainav" class="fl_right">
         <ul class="clear">
           <li class="active"><a href="index.html">Home</a></li>
-          <li><a class="drop" href="#">Pages</a>
+          <!--<li><a class="drop" href="#">Pages</a>
             <ul>
               <li><a href="">Reserve</a></li>
               <li><a href="">Reserve</a></li>
@@ -52,7 +52,7 @@
             </ul>
           </li>
           <li><a href="#">Reserve</a></li>
-          <li><a href="#">Reserve</a></li>
+          <li><a href="#">Reserve</a></li>-->
         </ul>
       </nav>
       <!-- ################################################################################################ -->
@@ -74,25 +74,25 @@
     </div>
     <ul class="nospace clear services">
       <li class="one_quarter first">
-        <figure><img src="images/demo/gallery/burger_nocheese.png" alt="">
+        <figure><img src="../images/demo/gallery/burger_nocheese.png" alt="">
           <figcaption>Burger</figcaption>
         </figure>
         <input class="qty_input" type="number" placeholder="0" name="qtyBurger">
       </li>
       <li class="one_quarter">
-        <figure><img src="images/demo/gallery/burger_cheese.png" alt="">
+        <figure><img src="../images/demo/gallery/burger_cheese.png" alt="">
           <figcaption>Cheese Burger</figcaption>
         </figure>
         <input class="qty_input" type="number" placeholder="0" name="qtyCheeseBurger">
       </li>
       <li class="one_quarter">
-        <figure><img src="images/demo/gallery/fries.png" alt="">
+        <figure><img src="../images/demo/gallery/fries.png" alt="">
           <figcaption>French Fries</figcaption>
         </figure>
         <input class="qty_input" type="number" placeholder="0" name="qtyFries">
       </li>
       <li class="one_quarter">
-        <figure><img src="images/demo/gallery/soda.png" alt="">
+        <figure><img src="../images/demo/gallery/soda.png" alt="">
           <figcaption>Soda Drink</figcaption>
         </figure>
         <input class="qty_input" type="number" placeholder="0" name="qtyDrink">
@@ -109,8 +109,8 @@
 <!-- ################################################################################################ -->
 <a id="backtotop" href="#top"><i class="fa fa-chevron-up"></i></a>
 <!-- JAVASCRIPTS -->
-<script src="layout/scripts/jquery.min.js"></script>
-<script src="layout/scripts/jquery.backtotop.js"></script>
-<script src="layout/scripts/jquery.mobilemenu.js"></script>
+<script src="../layout/scripts/jquery.min.js"></script>
+<script src="../layout/scripts/jquery.backtotop.js"></script>
+<script src="../layout/scripts/jquery.mobilemenu.js"></script>
 </body>
 </html>
